# OpenDaSA-Docs

./: .readthedocs.yaml  pyproject.toml
docs/source/: index.rst
